# codeless-front

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.sh  tailwind_info.md
src/: main.rs
src/backend/: fetch.rs  mod.rs
src/common/: binding.rs  highlight.rs  js_utils.rs  mod.rs  utils.rs
src/components/: api_display.rs  api_editor_resp.rs  main_body.rs  mod.rs  modal.rs  theme.rs  tooltip.rs
src/components/api_list/: api_select.rs  mod.rs
src/components/api_list/headers/: add_btn.rs  mod.rs
src/components/editor/: api_editor.rs  code_tab.rs  mod.rs  textarea.rs
src/components/editor/keymap/: arrow.rs  backspace.rs  enter.rs  mod.rs  tab.rs
src/components/editor/monaco_editor/: editor.rs
src/components/info/: api_info.rs  headers.rs  mod.rs  parameters.rs
src/components/response/: api_response.rs  api_response_header.rs  mod.rs  response_editor.rs
src/components/title/: main_title.rs  mod.rs
src/components/title/buttons/: mod.rs  play_btn.rs  save_btn.rs  theme_btn.rs
src/context/: code_context copy.rs  code_context.rs  code_tabs_context.rs  mod.rs  theme_context.rs
src/image/: mod.rs
