[package]
name = "codeless-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
gloo = "0.11.0"
js-sys = "0.3.67"
lazy_static = "1.4.0"
monaco = { git = "https://github.com/siku2/rust-monaco.git", features = [
    "yew-components",
] }
serde = "1.0.196"
serde_json = "1.0.113"
wasm-bindgen = "0.2.89"
wasm-bindgen-cli = "0.2.89"
wasm-bindgen-futures = "0.4.40"
web-sys = { version = "0.3.66", features = [
    "DataTransfer",
    "Element",
    "Navigator",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlDialogElement",
    "Navigator",
    "Clipboard",
    "HtmlDivElement",
    "HtmlDocument",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlTextAreaElement",
    "HtmlParagraphElement",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "KeyEvent",
    "KeyboardEvent",
    "KeyboardEventInit",
    "TouchEvent",
    "TouchList",
    "Touch",
    "DomTokenList",
    "DomRect",
    "Selection",
    "Range",
    "Node",
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',

] }
yew = { version = "0.21.0", features = ["csr"] }
